# microsoft_reports

./: .flake8  .gitignore  Jenkinsfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  reports.json
ci/: Jenkinsfile
reports/: http.py  utils.py  validation.py
reports/audit_tool/: README.md  entrypoint.py  http.py
reports/audit_tool/templates/xlsx/: template.xlsx
reports/missing_subscriptions/: README.md  entrypoint.py
reports/missing_subscriptions/templates/xlsx/: template.xlsx
reports/nce_migrations/: README.md  entrypoint.py
reports/nce_migrations/templates/xlsx/: template.xlsx
reports/nce_promos/: README.md  entrypoint.py
reports/nce_promos/templates/xlsx/: template.xlsx
tests/: conftest.py  test_microsoft_reports.py  test_utils.py
tests/fixtures/: assets_collection.json  customer_subscriptions.json  customers_collection.json  ff_request.json  ff_request_direct.json  installation_list.json  migration_requests.json  tc_request.json  tc_request_direct.json
