[tool.poetry]
name = "microsoft_reports"
version = "1.5.2"
description = "Microsoft Reports"
authors = ["Cloublue"]
license = "Apache Software License 2.0"
packages = [
    { include = "reports" }
]
readme = "./README.md"

[tool.poetry.dependencies]
python = "^3.8"
connect-openapi-client = "^25"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
responses = "^0.21.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=reports --cov-report=term-missing:skip-covered --cov-report=html --cov-report=xml"

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["tests/*", "venv*/*"]

exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "import",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
